--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ dkms.conf
 .Trash-*
 .nfs*
 [._]*.s[a-v][a-z]
-!*.svg  # comment out if you don't need vector files
+!*.svg  
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
